<resources>
    <string name="app_name">TabLayoutDemo</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate2">calculate2</string>
    <string name="fahrenheit">fahrenheit</string>
    <string name="celsius">celsius</string>
    <string name="calculate1">calculate1</string>
    <string name="miles">miles</string>
    <string name="kilometers">kilometers</string>

    <string name="_123_03">123.03</string>
    <string name="total_bill">Total Bill</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="number_of_people">Number of People</string>
    <string name="total_per_person">Total Per Person</string>
    <string name="click_calculate">Click Calculate</string>
    <string name="calculate_distance">Calculate Distance</string>
</resources>
