<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tab1Fragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/total_bill"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalText"
        app:layout_constraintEnd_toStartOf="@+id/totalText"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/tip_percent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tipText"
        app:layout_constraintEnd_toStartOf="@+id/tipText"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tipText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/number_of_people"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/peopleText"
        app:layout_constraintEnd_toStartOf="@+id/peopleText"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/peopleText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/total_per_person"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/totalPerPerson"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/totalText"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tipText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/peopleText"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/totalPerPerson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/tipText"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/tipText"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/peopleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/totalText"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/totalPerPerson"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <Button
        android:id="@+id/Calculate2"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/calculate2"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/totalPerPerson"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/click_calculate"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/Calculate2"
        app:layout_constraintEnd_toStartOf="@+id/Calculate2"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Calculate2"
        app:layout_constraintVertical_bias="0.509" />
</android.support.constraint.ConstraintLayout>